--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Jack - personal portfolio</title>
+  <title>Gowardhan's- personal portfolio</title>
 
   <!-- 
     - favicon
@@ -37,7 +37,7 @@
     <div class="container">
 
       <h1 class="h1 logo">
-        <a href="#">Jack<span>.</span></a>
+        <a href="#">MR>GB<span>.</span></a>
       </h1>
 
       <div class="navbar-actions">
@@ -114,7 +114,7 @@
 
         <div class="hero-content">
 
-          <h2 class="h2 hero-title">We Design & Build Creative Products</h2>
+          <h2 class="h2 hero-title">I Design & Build Creative Products</h2>
 
           <a href="#contact" class="btn btn-primary">Get in touch</a>
 
